# ngc-sim-lib

./: .gitignore  AUTHORS  CITATION.cff  README.md  bundle_rules.py  component.py  controller.py  pyproject.toml  pytest.ini  setup.py  utils.py
commands/: __init__.py  advanceState.py  clamp.py  command.py  compound.py  evolve.py  reset.py  save.py  snapshot.py  track.py
json_schemas/: modules.schema  steps.schema
ngclib/: __init__.py  bundle_rules.py  component.py  controller.py  utils.py
ngclib/commands/: __init__.py  advanceState.py  clamp.py  command.py  compound.py  evolve.py  multiclamp.py  reset.py  save.py  snapshot.py  track.py
ngcsimlib/: __init__.py  bundle_rules.py  compartment.py  component.py  componentUtils.py  component_utils.py  configManager.py  context.py  controller.py  deprecators.py  logger.py  metaComponent.py  operations.py  process.py  resolver.py  transition.py  utils.py
ngcsimlib/_src/: __init__.py  component.py  configManager.py  deprecators.py  logger.py  process.py
ngcsimlib/_src/compartment/: __init__.py  compartment.py  compartmentMeta.py
ngcsimlib/_src/context/: __init__.py  context.py  contextAwareObject.py  contextAwareObjectMeta.py  contextObjectDecorators.py  context_manager.py
ngcsimlib/_src/global_state/: __init__.py  manager.py
ngcsimlib/_src/modules/: modules_manager.py
ngcsimlib/_src/operations/: BaseOp.py  Product.py  Summation.py  __init__.py
ngcsimlib/_src/parser/: __init__.py  contextTransformer.py  kwargsTransformer.py  utils.py
ngcsimlib/_src/process/: baseProcess.py  jointProcess.py  methodProcess.py
ngcsimlib/_src/utils/: modules.py  priority.py
ngcsimlib/commands/: __init__.py  advanceState.py  clamp.py  command.py  compound.py  evolve.py  multiclamp.py  reset.py  save.py  seed.py  snapshot.py  track.py
ngcsimlib/compartment/: __init__.py  compartment.py  compartmentMeta.py
ngcsimlib/compilers/: __init__.py  command_compiler.py  component_compiler.py  op_compiler.py  process.py  utils.py
ngcsimlib/compilers/legacy_compiler/: command_compiler.py  component_compiler.py  op_compiler.py
ngcsimlib/compilers/process_compiler/: component_compiler.py  op_compiler.py
ngcsimlib/context/: __init__.py  _context_manager.py  context.py  contextObj.py  contextObjectDecorators.py  contextObjectMeta.py
ngcsimlib/global_state/: __init__.py  manager.py
ngcsimlib/json_schemas/: cables.schema  components.schema  config.schema
ngcsimlib/logger/: __init__.py
ngcsimlib/operations/: __init__.py  add.py  baseOp.py  negate.py  overwrite.py  summation.py
ngcsimlib/parser/: contextTransformer.py  kwargsTransformer.py  utils.py
ngcsimlib/utils/: __init__.py  compartment.py  context.py  help.py  io.py  misc.py  modules.py  resolvers.py  transitions.py
steps/: __init__.py  advanceState.py  clamp.py  evolve.py  reset.py  save.py  step.py  track.py
tests/: compartment_test.py
tutorials/: bundle_rules.md  commands.md  modules.md
