[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ngcsimlib"
version = "1.0.0"

description = "Simulation software backend for ngc-learn."
authors = [
  {name = "William Gebhardt", email = "wdg1351@rit.edu"},
  {name = "Alexander Ororbia", email = "ago@cs.rit.edu"},
]
readme = "README.md"
keywords = ['python', 'complex-systems', 'simulation']
requires-python = ">=3.10"
license = {text = "BSD-3-Clause License"}

[project.urls]
Homepage = "https://github.com/NACLab/ngc-sim-lib"
"Lab Page" = "https://www.cs.rit.edu/~ago/nac_lab.html"

